k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sentiment-api
  namespace: mlops-sentiment
  labels:
    app: sentiment-api
spec:
  type: NodePort
  selector:
    app: sentiment-api
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      nodePort: 30080
