k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sentiment-ingress
  namespace: mlops-sentiment
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: sentiment.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sentiment-api
                port:
                  number: 8000
